experimental/ir/testdata/syntax/proto4.proto.stderr.txt
error: unrecognized `syntax` declaration value
  --> testdata/syntax/proto4.proto:16:10
   |
16 | syntax = "proto4";
   |          ^^^^^^^^
   = note: treating the file as "proto2" instead
   = help: permitted values: "proto2", "proto3"

encountered 1 error
